--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         }
     </style>
   </head>
+  <header>
+    <div class="cont mt-4 text-center">
+      <img src="./assets/ledesma-por-colven.png" alt="">
+    </div>
+  </header>
   <body>
         
     <div class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">        
