--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
 <!-- Default theme -->
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+<link rel="icon" type="image/png" href="./assets/favicon-colven.png"/>
     <title>Ledesmapp</title>
     <style>
         body{
@@ -22,7 +23,7 @@
         }
     </style>
   </head>
-  
+
   <body>
 
     <header>
